2001-01-22  Mark A. Hershberger  <mah@everybody.org>

	* lib/XML/XSLT.pm (__get_first_element):
	Better code to find the first /Element/ of a stylesheet rather than
	  the first Child of the XML::DOM object

	* lib/XML/XSLT.pm (__set_xsl_output):
	Fix up xsl:output handling of HTML and XML types
	
	* lib/XML/XSLT.pm:
	Document support for xsl:output.
	Document support with xsl:call-template.

	
2001-01-15  Mark A. Hershberger  <mah@everybody.org>

	* lib/XML/XSLT.pm : Release 0.30 didn't work with CPAN.  Moving
	XML::XSLT::DOM::TextDOE package declaration as I suspect that it
	is the problem.

2000-07-11  Bron Gondwana  <perlcode@brong.net>

        * XSLT.pm (_value_of): fixed another bug that tested for truth
	rather than defined-ness of a value.  It now deals correctly with
	zeros in yet another case!

	* XSLT.pm: Changed all the calls to getNodeValue to check that
	the output node actually has the specified attribute before
	attempting the sub method call.  Incremented version to 0.24.

2000-07-03  Mark A. Hershberger  <mah@everybody.org>

	* XSLT.pm: implementing recursive includes

	* xslt-parser: replaced manual argument processing with
	Getopt::Std
	
2000-07-02  Mark A. Hershberger  <mah@everybody.org>

	* XSLT.pm (__open_by_filename): Got the read-by-url-even-file
	to work.

	* xslt-parser: updated to use the new interface.

	* XSLT.pm: More interface rearranging.  Moved from hashref to
	arrayref.  Moved namespace constants to `use constant'. etc. etc.
	

2000-06-29  Mark A. Hershberger  <mah@everybody.org>

	* XSLT.pm: Lots of documenting and interface rearranging.

2000-06-28  Bron Gondwana  <perlcode@brong.net>

	* XSLT.pm (dispose): Removed attempt to call dispose on DOMparser
	as this doesn't actually have a dispose method.  Incremented
	version number to 0.23.
